# PulseCRM

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapters.md  benchmarking.md  concepts.md  wire-contract.md
eval/: README.md  thresholds.yaml
eval/golden/: dedup.jsonl  intents.jsonl
examples/configs/: discord-slack-notion.yaml
examples/quickstart/: messages.jsonl  pulse.yaml
examples/quickstart/kb/: connect-account.md  editor-crash.md
skills/attachment-sync/: SKILL.md  prompt.md
skills/regression-classifier/: SKILL.md  prompt.md
skills/triager/: SKILL.md  config.example.yaml  prompt.md  schema.json
src/pulsecrm/: __init__.py  bench.py  cli.py  config.py  dedup.py  gating.py  grouping.py  models.py  pipeline.py  registry.py
src/pulsecrm/adapters/: __init__.py
src/pulsecrm/adapters/classifiers/: __init__.py  mock.py  openai.py
src/pulsecrm/adapters/drafters/: __init__.py  llm.py  templated.py
src/pulsecrm/adapters/enrichers/: __init__.py  attachment_sync.py  phone_lookup.py
src/pulsecrm/adapters/knowledge/: __init__.py  markdown.py  notion.py
src/pulsecrm/adapters/notifiers/: __init__.py  console.py  slack.py
src/pulsecrm/adapters/sources/: __init__.py  discord.py  file_replay.py
src/pulsecrm/adapters/ticket_sinks/: __init__.py  jsonl.py  linear.py  notion.py
src/pulsecrm/ports/: __init__.py  base.py  classifier.py  drafter.py  enricher.py  knowledge.py  notifier.py  source.py  ticket_sink.py
tests/: test_config.py  test_gating.py  test_grouping.py  test_pipeline_e2e.py
