[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsecrm"
version = "0.1.0"
description = "A platform-agnostic pipeline that turns community/customer chatter into triaged, ticketable signal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PulseCRM contributors" }]
keywords = ["crm", "triage", "llm", "pipeline", "support", "bug-tracking", "adapters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
discord = ["discord.py>=2.3"]
slack = ["slack-sdk>=3.27"]
notion = ["httpx>=0.27"]
all = ["openai>=1.30", "discord.py>=2.3", "slack-sdk>=3.27", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/CalumZhang/PulseCRM"
Repository = "https://github.com/CalumZhang/PulseCRM"
Issues = "https://github.com/CalumZhang/PulseCRM/issues"

[project.scripts]
pulsecrm = "pulsecrm.cli:app"

# Third-party adapters can register themselves under this entry-point group.
# Example (in another package's pyproject):
#   [project.entry-points."pulsecrm.adapters"]
#   my_source = "my_pkg.adapters:register"
[project.entry-points."pulsecrm.adapters"]

[tool.hatch.build.targets.wheel]
packages = ["src/pulsecrm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
